--- a/03-WebTechnologies/array.html
+++ b/03-WebTechnologies/array.html
@@ -7,16 +7,11 @@
 	<body>
 		<h1>Create methods</h1>
 		<script>
-			var myArray = {
-					arr: [3,4,76,1,5,787,33,76,1,99,45,235,53,23],
-					min: function(){
-						// maximum value (sort the arr and take the last value, use a built-in function)
-					},		
-					max: function(){},		// look at the min method comment
-					avg: function(){},		// avarage value
-					lth: function(val){}	// the number of arr values less than 'val'
-			};
-			
+			var myArray = [];
+			for(i = 1) myArray.push(Math.floor(Math.random()*6));
+
+
+				
 			// display results (min,max,avg,lth) in the console
 			// ...
 		</script>
