--- a/03-WebTechnologies/condition.html
+++ b/03-WebTechnologies/condition.html
@@ -9,13 +9,14 @@
 		<p>Display data one the console</p>
 
 		<script>
-			// enter your name, surname
-			// ...
+			var name = "Weronika";
+			var surname = "Jankowska";
+			var age = "19";
 			
-			// display your personal data on the console
-			// ...
-			
-			// 
+			var x = confirm("Press OK to see my data");
+				if(x == true){
+					console.log(name+" "+surname+" "+age)
+				}
 		</script>
 	</body>
 </html>
