--- a/03-WebTechnologies/enter.html
+++ b/03-WebTechnologies/enter.html
@@ -9,13 +9,13 @@
 		<p>Display data one the console</p>
 
 		<script>
-			// enter your name, surname
-			// ...
+			var name = "Weronika";
+			var surname = "Jankowska";
+			var age = "19";
+
+			console.log(name+" "+surname+" "+age);
 			
-			// display your name and surname in a popup window and on the console
-			// ...
-			
-			// 
+			window.alert(name+" "+surname+" "+age);
 		</script>
 	</body>
 </html>
