--- a/03-WebTechnologies/message.html
+++ b/03-WebTechnologies/message.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Display message</title>
+		<title>Display name and surname</title>
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<h1>Display message</h1>
-		<p>Display results on the console</p>
+		<h1>Display name and surname</h1>
+		<p>Display my data</p>
 
 		<script>
-			// display your name, surname on the console
-			// ...
+			console.log("Weronika"+"\n"+"Jankowska");
 			
-			// display your name and surname in a popup window
-			// ...
-			
-			// 
+			window.alert("Weronika"+"\n"+"Jankowska");
 		</script>
 	</body>
 </html>
