--- a/03-WebTechnologies/pattern.html
+++ b/03-WebTechnologies/pattern.html
@@ -8,6 +8,11 @@
 		<h1>Display pattern</h1>
 
 		<script>
+			var str = "*";
+			var i;
+			for (i = 1; i < 6; i++){
+				console.log(str.repeat(i));
+			}
 			/* compete JavaScript code ...
 			for (i = 1; i < ...) {
 				// use 'repeat' function to display '*'
