--- a/03-WebTechnologies/events.html
+++ b/03-WebTechnologies/events.html
@@ -4,9 +4,11 @@
 		<title>Reacting to events</title>
 		<meta charset="UTF-8">
 	</head>
+	<script src="js/events.js"></script>
 	<body>
 		<h1>Reacting to events</h1>
 		<p id="message">waiting for your action ...</p>
-		<button id="button" type="button">Click</button>
+		<button id="button" type="button" onclick="message(X)">Click</button>
+	
 	<body>
 </html>
