--- a/03-WebTechnologies/events.html
+++ b/03-WebTechnologies/events.html
@@ -10,5 +10,5 @@
 		<p id="message">waiting for your action ...</p>
 		<button id="button" type="button" onclick="message(X)">Click</button>
 	
-	<body>
+	</body>
 </html>
