--- a/03-WebTechnologies/message.html
+++ b/03-WebTechnologies/message.html
@@ -9,9 +9,11 @@
 		<p>Display my data</p>
 
 		<script>
-			console.log("Weronika"+"\n"+"Jankowska");
-			
-			window.alert("Weronika"+"\n"+"Jankowska");
+			var name = "Weronika";
+        	var surname = "Jankowska";
+        
+        	window.alert(name+'\n'+surname);
+        	console.log(name+'\n'+surname);
 		</script>
 	</body>
 </html>
