--- a/03-WebTechnologies/books.html
+++ b/03-WebTechnologies/books.html
@@ -7,6 +7,51 @@
 	<body>
 		<h1>Display books list</h1>
 		<script>
+			var first = {
+				id: 1,
+				title: "The Return of Duck and Goose",
+				author: "Sir Piggy",
+				format: "paperback",
+				price: 19.99,
+			};
+			var second = {
+				id: 2,
+				title: "The Adventures of Duck and Goose",
+				author: "D. Cow",
+				format: "hardback",
+				price: 18.99,
+			};
+			var third = {
+				id: 3,
+				title: "My Friend is a Duck",
+				author: "A. Parrot",
+				format: "paperback",
+				price: 14.99,
+			};
+			var fourth = {
+				id: 4,
+				title: "‘Duck and Goose’ Cheat Sheet for Students",
+				author: "Polly Parrot",
+				format: "paperback",
+				price: 5.99,
+			};
+			var fifth = {
+				id: 5,
+				title: "‘Duck and Goose’: an allegory for modern times?",
+				author: "Bor Ing",
+				format: "ebook",
+				price: 59.99,
+			};
+			var books = [first, second, third, fourth, fifth];
+
+			for (i=0;i<books.length;i++) {
+				if (books[i].format == "paperback") {
+					console.log(books[i]);
+				}
+				else {
+					document.write('');
+				}
+			};
 		</script>
 	</body>
 </html>
