--- a/03-WebTechnologies/guessing.html
+++ b/03-WebTechnologies/guessing.html
@@ -10,7 +10,7 @@
 		<script>
 			var guess = prompt("Type number"); // read user's number (popup window)
 			
-			var number = Math.floor(Math.random()*6);// create a random number
+			var number = Math.floor(Math.random()*5)+1;// create a random number
 			
 			if(guess == number){
 				window.alert("Good Work");
